--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,12 @@
   <body>
     <div id="app">
       <div id="chat_container"></div>
+
+      <form>
+        <textarea name="prompt" cols="1" rows="1" placeholder="Ask Codex...">
+        </textarea>
+        <button type="submit"><img src="assets/send.svg"></button>
+      </form>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
